collector_list (_app_extra_c_flags APP_EXTRA_C_FLAGS)
set (_cflags "${CMAKE_C_FLAGS} ${_app_extra_c_flags}")
set (_fw_dir "${APPS_SHARE_DIR}")

collector_list (_list PROJECT_INC_DIRS)
collector_list (_app_list APP_INC_DIRS)
include_directories (${_list} ${_app_list} ${CMAKE_CURRENT_SOURCE_DIR})

collector_list (_list PROJECT_LIB_DIRS)
collector_list (_app_list APP_LIB_DIRS)
link_directories (${_list} ${_app_list})

get_property (_linker_opt GLOBAL PROPERTY APP_LINKER_OPT)
if (WITH_ZYNQMP)
  collect (PROJECT_LIB_DEPS xilpm)
endif (WITH_ZYNQMP)
collector_list (_deps PROJECT_LIB_DEPS)

set (OPENAMP_LIB open_amp)

if (WITH_WFI)
  add_definitions(-DWITH_WFI)
endif (WITH_WFI)

foreach (_app load_fw)
  collector_list (_sources APP_COMMON_SOURCES)
  list (APPEND _sources "${CMAKE_CURRENT_SOURCE_DIR}/mem_image_store.c")
  if (WITH_ZYNQMP)
    list (APPEND _sources "${CMAKE_CURRENT_SOURCE_DIR}/zynqmp_apu_lcm_rproc_example.c")
    list (APPEND _sources "${CMAKE_CURRENT_SOURCE_DIR}/zynqmp_rpu_lcm_rproc_example.c")
    add_definitions(-DWITH_ZYNQMP)
  endif (WITH_ZYNQMP)
  if (WITH_RV64)
    list (APPEND _sources "${CMAKE_CURRENT_SOURCE_DIR}/virt_rv64_rproc_example.c")
    add_definitions(-DWITH_RV64)
  endif (WITH_RV64)
  list (APPEND _sources "${CMAKE_CURRENT_SOURCE_DIR}/platform_info.c")
  list (APPEND _sources "${CMAKE_CURRENT_SOURCE_DIR}/${_app}.c")

  if (WITH_SHARED_LIB)
    add_executable (${_app}-shared ${_sources})
    target_link_libraries (${_app}-shared ${OPENAMP_LIB}-shared ${_deps})
    install (TARGETS ${_app}-shared RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
  endif (WITH_SHARED_LIB)
  if (WITH_STATIC_LIB)
    add_executable (${_app}.out ${_sources})
    set_source_files_properties(${_sources} PROPERTIES COMPILE_FLAGS "${_cflags}")
    target_link_libraries(${_app}.out -Wl,-Map=${_app}.map -Wl,--gc-sections -T"${CMAKE_CURRENT_SOURCE_DIR}/lscript.ld" -Wl,--start-group ${OPENAMP_LIB}-static ${_deps} -Wl,--end-group)
    install (TARGETS ${_app}.out RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
  endif (WITH_STATIC_LIB)

endforeach(_app)
